--- a/Pair Project Food/views/login.ejs
+++ b/Pair Project Food/views/login.ejs
@@ -101,9 +101,10 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="submit" class="login-btn">Login</button>
+            <button action="/mainMenu" type="submit" class="login-btn">Login</button>
             <a href="/register" class="forgot-password">Register</a>
         </form>
+        
     </div>
 </body>
 </html>
